# portfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml  vercel_deploy.yml
public/: local_storage.js  snow.js  styles.css  utils.js
src/: main.rs  utils.rs
src/components/: mod.rs  project.rs  showcase.rs  skill.rs  snow.rs  theme.rs  tooltip.rs
src/icons/: astro.rs  cloud.rs  code.rs  csharp.rs  discord.rs  dotnet.rs  flask.rs  github.rs  home.rs  instagram.rs  js.rs  mail.rs  mod.rs  moon.rs  mysql.rs  newspaper.rs  next.rs  node.rs  paypal.rs  python.rs  react.rs  rust.rs  selector.rs  sqlite.rs  sun.rs  telegram.rs  ts.rs  twitter.rs
styles/: main.css
